Homework Week3 in progress
